IJP-630 (wip) Don't show Actions on Save page in Rider 2021.2. Update the 'feature on save' per IDE applicability.
GitOrigin-RevId: e530b2a6ef3b818fab2540f1263ce60d0d95a12f